--- a/sass/app.scss
+++ b/sass/app.scss
@@ -34,11 +34,6 @@ main .sideBar {
     }
 }
 
-// @media #{$medium-and-down} {
-//     .nav-wrapper p {
-//         margin-top: 47px;
-//     }
-// }
 .form_div {
     h3 {
         color: color('pink', 'lighten-2');
@@ -64,5 +59,13 @@ main .sideBar {
 footer.page-footer {
     padding: {
         top: 0;
+    }
+}
+
+.hms_officials {
+    span.badge {
+        margin: {
+            bottom: 2px;
+        }
     }
 }
