--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -1,71 +1,104 @@
 @import 'materialize';
+
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    font-size: 100%;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  font-size: 100%;
+}
+
+%no-float {
+  float: none !important;
+  margin: {
+	left: auto;
+	right: auto;
+  }
 }
 
 main {
-    flex: 1 0 auto;
+  flex: 1 0 auto;
 }
 
 .clearfix {
-    clear: both;
+  clear: both;
 }
 
 nav {
-    height: auto !important;
-    .nav-content {
-        &>div {
-            margin: {
-                bottom: 0;
-            }
-        }
-    }
+  height: auto !important;
+  .nav-content {
+	& > div {
+	  margin: {
+		bottom: 0;
+	  }
+	}
+  }
+  .brand-logo + small {
+	box-shadow: 5px 3px 3px 0 rgba(0, 0, 0, .14), 5px 7px 7px 0 rgba(0, 0, 0, .12), 5px 4px 1px -1px rgba(0, 0, 0, .2);
+	padding: 5px;
+	background-color: brown;
+  }
+  li {
+	box-shadow: 5px 3px 3px 0 rgba(0, 0, 0, .14), 5px 7px 7px 0 rgba(0, 0, 0, .12), 5px 4px 1px -1px rgba(0, 0, 0, .2);
+  }
 }
 
 main .sideBar {
-    position: relative !important;
-    transform: translateX(0) !important;
-    @media only screen and (max-width: 450px) {
-        width: 100%;
-        text-align: center;
-    }
+  position: relative !important;
+  transform: translateX(0) !important;
+  @media only screen and (max-width: 450px) {
+	width: 100%;
+	text-align: center;
+  }
 }
 
 .form_div {
-    h3 {
-        color: color('pink', 'lighten-2');
-        font: {
-            size: 2rem;
-            weight: 500;
-        }
-        padding: {
-            left: 0.75rem;
-        }
-    }
-    &>div {
-        float: none !important;
-        margin: {
-            right: auto;
-        }
-    }
-    input {
-        padding-left: 5px;
-    }
+  h3 {
+	color: color('pink', 'lighten-2');
+	font: {
+	  size: 2rem;
+	  weight: 500;
+	}
+	padding: {
+	  left: 0.75rem;
+	}
+  }
+  & > div {
+	float: none !important;
+	margin: {
+	  right: auto;
+	}
+  }
+  input {
+	padding-left: 5px;
+  }
 }
 
 footer.page-footer {
-    padding: {
-        top: 0;
-    }
+  padding: {
+	top: 0;
+  }
 }
 
 .hms_officials {
-    span.badge {
-        margin: {
-            bottom: 2px;
-        }
-    }
+  span.badge {
+	margin: {
+	  bottom: 2px;
+	}
+  }
+}
+
+.appointments {
+  .doctor_name {
+	text-transform: capitalize;
+  }
+  .appointment_menu {
+	a {
+	  padding: 0 !important;
+	}
+	z-index: 10 !important;
+
+  }
+  .appointment {
+	@extend %no-float;
+  }
 }
