--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -88,6 +88,8 @@ footer.page-footer {
 }
 
 .appointments {
+  margin: 0;
+  position: relative;
   .doctor_name {
 	text-transform: capitalize;
   }
@@ -105,7 +107,30 @@ footer.page-footer {
 		left: auto;
 		right: auto;
 	  }
-
+	}
+	.card-content p {
+	  margin-bottom: 10px;
+	  padding: 5px 3px;
+	  border-bottom: solid thin color("blue", 'darken-1');
+	  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, .14), 0 7px 7px 0 rgba(0, 0, 0, .12), 0 4px 1px -1px rgba(0, 0, 0, .2);
+	}
+	.action-block {
+	  margin: {
+		top: 5px;
+	  }
+	;
 	}
   }
+}
+
+.pagination_block {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 10%;
+  right: 10%;
+  margin: {
+	bottom: 0;
+  }
+;
 }
